--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "browser-or-node": "^3.0.0",
+    "client-helper": "^0.1.0",
     "lodash": "^4.17.21",
     "pluralize": "^8.0.0"
   }
